List of changes from version 2.5.5 to 2.6 (until April 12th, 2012)
     - new species bombus_terrestris, rhodnius, Conidiobolus_coronatus
     - new auxiliary programs filterBam, bam2hints
     - update to species tomato
     - option --mea=1 to maximize expected accuracy instead of using Viterbi algorithm
     - new option --contentmodels=off that neutralizes all models except signal models
       (to analyse SNP influence on gene structure)
     - new parameter --min_intron_len for species with shorter introns than the default 39bp
     - added scripts wigchoose.pl, filterShrimp.pl
     - updated RNA-Seq documentation readme.rnaseq.html
     - bugfixes (in augustus, autoAugPred.pl, maskNregions.pl, optimize_augustus.pl, filterPSL.pl,
       intron2exex.pl
List of changes from version 2.5 to 2.5.5 (until March 2nd, 2011)
     - added a tutorial
     - bugfixes, in particular one that caused a crash on Mac OS
     - new species verticillium, honeybee, butterfly
     - option --noprediction=1 to score input gene structures
     - adjust autoAug.pl to new PASA version
List of changes from version 2.4 to 2.5 (until Nov 13th, 2010)
     - first release of protein profile extension (PPX)
     - scripts added for PPX:
       msa2prfl.pl: converts MSAs in FASTA/CLUSTAL format to protein profiles to use with AUGUSTUS
       block2prfl.pl: converts BLOCKS database flat file to protein profile
       del_from_prfl.pl: manually delete blocks from profile
     - executables added for PPX: 
       prepareAlign: eliminates gap-rich sequences from FASTA MSA
       fastBlockSearch: performs a preliminary profile search to determine regions for gene prediction
     - PPX-specific new parameters are:
       /ProteinModel/allow_truncated: allows profile hits in right-truncated genes
       /ProteinModel/block[part]_threshold_{sens,spec}: set model specificity/sensitivity
       /ProteinModel/weight: set weighting of protein model vs. ab-initio model