@@ -57,7 +57,7 @@ enum Strand {STRAND_UNKNOWN=-1, plusstrand, minusstrand, bothstrands};
 #define MODEL_SUBDIR "model/"
 #define EXTRINSIC_SUBDIR "extrinsic/"
 
-#define VERSION "2.6"
+#define VERSION "2.6.1"
 
 #define PREAMBLE "# This output was generated with AUGUSTUS (version " VERSION ").\n\
 # AUGUSTUS is a gene prediction tool for eukaryotes written by Mario Stanke (mario.stanke@uni-greifswald.de)\n\
